--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,6 +8,7 @@
     "playwright.config.*"
   ],
   "compilerOptions": {
+    "resolveJsonModule": true,
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
