--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@3d-dice/dice-box": "^1.0.10",
+    "firebase": "^10.7.0",
+    "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
